[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Square.gd" type="Script" id=1]
[ext_resource path="res://art/With Shadow/128px/square brown dark.png" type="Texture" id=2]
[ext_resource path="res://art/No shadow/128h/highlight.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="square" type="Node2D" groups=["squares"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite" groups=["squares"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="highlight" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
